# cs336g-a2-systems

./: .gitignore  pyproject.toml
.devcontainer/: devcontainer.json
conf/: TinyStories.yaml  owt.yaml
cs336-basics/cs336_basics/: model.py
cs336_systems/: flash_attention.py  triton_leaderboard.py  utils.py
scripts/: profile_passes.py
tests/: adapters.py  conftest.py  test_attention.py
